# doc2dataset

./: 3dcf_doc2dataset_spec.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  env.example
crates/cli/: Cargo.toml
crates/core/: Cargo.toml  README.md  build.rs
crates/core/examples/: batch_process.rs  custom_config.rs  encode_pdf.rs
crates/core/proto/: 3dcf.proto
crates/core/src/: index.rs  ingest.rs  lib.rs  prelude.rs
crates/doc2dataset/: Cargo.toml
crates/doc2dataset/src/: model.rs  tasks.rs
crates/doc2dataset/src/export/: axolotl.rs  hf.rs  llama_factory.rs  openai.rs  rag.rs
crates/ffi-node/: Cargo.toml
crates/ffi-py/: Cargo.toml
crates/rag/: Cargo.toml
crates/service/: Cargo.toml
docs/: BENCH.md  CLI.md  CONFIG.md  FORMAT.md  INSTALL.md  where-encode-serialize-stats.md
examples/doc2dataset/axolotl-rag/: README.md  doc2dataset.yaml
examples/doc2dataset/llama-factory-sharegpt/: README.md  doc2dataset.yaml
examples/doc2dataset/openai-finetune/: README.md  doc2dataset.yaml
