[package]
name = "three-dcf-core"
version = "0.2.0"
edition = "2021"
authors = ["3DCF Contributors"]
license = "Apache-2.0"
description = "Document-to-dataset encoding library for LLM training data preparation. Converts PDFs, Markdown, HTML into structured formats optimized for machine learning."
repository = "https://github.com/3DCF-Labs/doc2dataset"
documentation = "https://docs.rs/three-dcf-core"
readme = "README.md"
keywords = ["llm", "dataset", "pdf", "document", "ml"]
categories = ["encoding", "text-processing", "parser-implementations"]
rust-version = "1.75"

[features]
default = ["text"]
pdfium = ["dep:pdfium-render"]
ocr = ["dep:leptess"]
text = []
full = ["pdfium", "ocr"]

[dependencies]
anyhow = "1"
blake3 = "1"
bytes = "1"
hdrhistogram = "7"
html2text = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "tiff", "bmp"] }
hex = "0.4"
itertools = "0.12"
leptess = { version = "0.5", optional = true }
pulldown-cmark = "0.10"
prost = "0.12"
prost-types = "0.12"
pdf-extract = "0.10"
rayon = "1"
regex = "1"
rstar = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
tiktoken-rs = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
zstd = { version = "0.13", default-features = false, features = ["zstdmt"] }
strsim = "0.11"
base64 = "0.21"
rustc-hash = "1.1"
sysinfo = "0.30"

chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
lopdf = "0.34"
once_cell = "1"
rand = "0.8"
tempfile = "3"
unicode-normalization = "0.1"
unicode-segmentation = "1"
walkdir = "2"

# Optional native integrations
pdfium-render = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"

[[example]]
name = "encode_pdf"
path = "examples/encode_pdf.rs"

[[example]]
name = "batch_process"
path = "examples/batch_process.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
